Bug 986253 - Limit a number of Fence to 4 per message. r=nical, a=1.4+